2006-09-27 [colin]	1.89.1cvs2

	* src/vcal_folder.c
		Fix wrong variable use. Patch by
		Ales Nosek <anosek@suse.cz>

2006-09-26 [colin]	1.89.1cvs1

	* src/plugin.c
	* src/vcal_meeting_gtk.c
		Follow SC 2.5.2cvs1 API change

2009-05-25 [paul]	1.89.1

	1.89.1 released

2006-09-25 [paul]	1.89.0cvs7

	* po/de.po
	* po/es.po
	* po/fi.po
	* po/fr.po
	* po/pt_BR.po
	* po/sk.po
		updated by Stephan Sachse, Ricardo Mones Lastra,
		Flammie Pirinen, Fabien Vantard, Frederico Goncalves
		Guimaraes, and Andrej Kacian

2006-09-23 [colin]	1.89.0cvs6

	* src/vcal_manager.c
		Workaround a strange crash reported to me.

2006-09-22 [ticho]	1.89.0cvs5

	* configure.ac
		Update required sylpheed-claws version to 2.4.0.200.

2006-09-21 [colin]	1.89.0cvs4

	* src/vcal_meeting_gtk.c
		Workaround possible GTK crash: remove selection
		clipboard before destroying widget, or GTK+-2.10
		dies. Thanks to Hiro.

2006-09-11 [wwp]	1.89.0cvs3

	* config.h.in
		remove generated file.

2006-09-09 [colin]	1.89.0cvs2

	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
		From RFC 2445: TZID is UTC not GMT, and
		DT* shouldn't contain TZID parameter when
		it is UTC.

2006-09-09 [colin]	1.89.0cvs1

	* src/vcal_meeting_gtk.c
		GUI fixups - Add scrolledwindow for description,
		make stuff unsensitive when needed, wait cursor,
		and alignment.

2006-09-09 [colin]	1.89

	* Release 1.89

2006-09-09 [colin]	1.79.2cvs28

	* src/vcal_folder.c
	* src/vcal_meeting_gtk.c
	* src/vcal_meeting_gtk.h
	* src/vcalendar.c
		o Only save received meetings in my Meetings
		  if I accept them
		o Better availability check when planning
		  meetings
		o Warn if not available when receiving a meeting
		o Various fixes

2006-09-08 [colin]	1.79.2cvs27

	* src/vcal_meeting_gtk.c
		Avoid exporting empty IFB files - Outlook chokes
		on them. If we don't have any meeting, just 
		export a VFREEBUSY component with zero
		FREEBUSY properties.

2006-09-07 [colin]	1.79.2cvs26

	* src/vcal_meeting_gtk.c
		Fix segfault with empty free/busy
