@@ -1,3 +1,9 @@
+2006-09-29 [colin]	1.89.1cvs3
+
+	* src/vcal_folder.c
+	* src/vcal_manager.c
+		Optimise things a bit, and fix a leak
+
 2006-09-27 [colin]	1.89.1cvs2
 
 	* src/vcal_folder.c
